[gd_scene load_steps=13 format=3 uid="uid://c16kyfw1bnt1g"]

[ext_resource type="Texture2D" uid="uid://cyvnkxbkkkw08" path="res://Assets/Sprites/health_bar_back.png" id="1_2bkfq"]
[ext_resource type="Texture2D" uid="uid://cq8pxd3ufgwbb" path="res://Assets/Sprites/health_bar.png" id="1_48qa5"]
[ext_resource type="Script" path="res://UI/HUD/hud.gd" id="1_pyn81"]
[ext_resource type="Texture2D" uid="uid://dfo6hvhv4gs8h" path="res://Assets/Sprites/health_bar_front.png" id="2_866yd"]
[ext_resource type="Texture2D" uid="uid://ci2e7frw2asnh" path="res://Assets/Sprites/armor_bar_back.png" id="4_ebtbs"]
[ext_resource type="Theme" uid="uid://cl5jbjd3dt4a1" path="res://UI/label_theme.tres" id="4_tgypq"]
[ext_resource type="Texture2D" uid="uid://ce57e52isogn7" path="res://Assets/Sprites/armor_bar.png" id="5_7lwlq"]
[ext_resource type="FontFile" uid="uid://bp06ltyh6xp1o" path="res://Assets/Fonts/pixel_font.ttf" id="5_kvesb"]
[ext_resource type="Texture2D" uid="uid://cglctb3pieg1r" path="res://Assets/Sprites/armor_bar_front.png" id="6_glvsi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ub08t"]
content_margin_top = 20.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ri4r2"]
content_margin_right = 20.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_onkjt"]
content_margin_left = 20.0

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pyn81")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 73.0
grow_horizontal = 2

[node name="Margin" type="MarginContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 25

[node name="HBox" type="HBoxContainer" parent="VBox/Margin"]
layout_mode = 2
alignment = 1

[node name="HealthBar" type="TextureProgressBar" parent="VBox/Margin/HBox"]
layout_mode = 2
size_flags_horizontal = 6
texture_under = ExtResource("1_2bkfq")
texture_over = ExtResource("1_48qa5")
texture_progress = ExtResource("2_866yd")

[node name="Label" type="Label" parent="VBox/Margin/HBox/HealthBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -11.5
offset_right = 0.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_kvesb")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Time" type="RichTextLabel" parent="VBox/Margin/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_tgypq")
theme_override_font_sizes/normal_font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_ub08t")
bbcode_enabled = true
text = "[center]1:23"
fit_content = true

[node name="Armorbar" type="TextureProgressBar" parent="VBox/Margin/HBox"]
layout_mode = 2
size_flags_horizontal = 6
fill_mode = 1
texture_under = ExtResource("4_ebtbs")
texture_over = ExtResource("5_7lwlq")
texture_progress = ExtResource("6_glvsi")

[node name="Label" type="Label" parent="VBox/Margin/HBox/Armorbar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -11.5
offset_right = 0.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_kvesb")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2
alignment = 1

[node name="KillCount" type="RichTextLabel" parent="VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_tgypq")
theme_override_font_sizes/normal_font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_ri4r2")
bbcode_enabled = true
text = "[right]Kills: 0"
fit_content = true

[node name="Divider" type="RichTextLabel" parent="VBox/HBox"]
layout_mode = 2
theme = ExtResource("4_tgypq")
theme_override_font_sizes/normal_font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_ri4r2")
bbcode_enabled = true
text = "|"
fit_content = true

[node name="BossKill" type="RichTextLabel" parent="VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_tgypq")
theme_override_font_sizes/normal_font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_onkjt")
bbcode_enabled = true
text = "Boss: 0"
fit_content = true

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
